initializr skill: tighten build/run reference, add build-hints index, document dark-mode CSS
Build-and-run reference:
- Drop the redundant `--add-exports` paragraph (already covered by the JDK
  table) and the corresponding "common build errors" entry — not applicable
  to Java 17+ projects.
- Drop the "Pointing the project at a local Codename One snapshot" section;
  irrelevant for end users generated by the initializr.
- Document `-Dautomated=true` and `cn1:set-user-token` for CI / LLM-driven
  unattended cloud builds.
- Add Xcode prerequisites (macOS, Xcode version, command-line tools,
  CocoaPods, signing) for the local `ios-source` build path.
- Clarify that `codename1.arg.java.version=17` keeps routing the cloud
  build to the JDK 17 toolchain regardless of the local JDK.
- Replace the "copy from framework checkout" hint with a direct download
  link for `CodeNameOneBuildClient.jar`.
- Add developer-guide / JavaDoc / Maven manual reference links.

New `references/build-hints.md` index: curated table of the most useful
`codename1.arg.*` keys grouped by platform (iOS, Android, push, Windows,
web, universal), with pointers to the authoritative Developer Guide and
the in-simulator Build Hints menu.

CSS reference: stop claiming CN1 has "no `@media` queries". The CSS
compiler honors `@media (prefers-color-scheme: dark)` and rewrites its
rules into `$Dark<UIID>` variants. Mention this in css.md (with example),
html-css-cheatsheet.md, and mobile-adaptability.md, and clarify the
`Display.setDarkMode(Boolean)` runtime override.

Test: GeneratorModelMatrixTest.validateClaudeSkillBundled now also
asserts `references/build-hints.md` is shipped into Java 17 projects.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>